--- a/src/main/webapp/pub/css/style.css
+++ b/src/main/webapp/pub/css/style.css
@@ -13,7 +13,7 @@
     border:none !important;
     outline: none !important;
     text-decoration: none !important;
-    text-transform: capitalize;
+    /*text-transform: capitalize;*/
     font-weight: 400;
     transition: all .2s linear;
 }
@@ -31,7 +31,7 @@ html{
 body{
     overflow-x: hidden;
     background:lightgray;
-    margin:auto;
+    /*margin:auto;*/
 }
 
 section{
@@ -126,6 +126,48 @@ header .fa-bars{
     cursor: pointer;
     display: none;
 }
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: lightgray;
+    color: var(--black);
+    padding: 12px;
+    font-size: 20px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: darkgray;}
 
 .home{
     background:lightgray;
@@ -296,9 +338,9 @@ header .fa-bars{
 
 .footer{
     background:var(--black);
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
+    /*position: absolute;*/
+    /*bottom: 0px;*/
+    /*width: 100%;*/
 }
 
 .footer .credit{
@@ -317,6 +359,8 @@ header .fa-bars{
 header .fa-times{
     transform: rotate(180deg);
 }
+
+
 
 /* media queries  */
 
